# AiM3G

./: .gitignore  README.md  pyproject.toml
aim3g/: CONSTANT.py  __init__.py  _misc_tools.py  _poscar_process.py  airss_struc_provider.py  m3gnet_relax.py  structure_analyser.py
example/C2/: 2.collect_result_to_json.py
example/LiFeSe/: 1.start_aim3g.py  1x.continue_aim3g.py  2x.print_grouped_structures.py  2y.glimpse_one_group.py  LiFeSe.cell
